feat:리셋 css 적용, header, footer 컴포넌트 적용

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,11 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/reset.css" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <title>메이플 캐릭터 검색 - 메짱</title>
   </head>
   <body>
-    <p>
-      메이플 캐릭터 검색 - 메짱
-      https://mezzang.gg/
-    </p>
+    <div id="root"></div>
   </body>
 </html>
