--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="%PUBLIC_URL%/reset.css" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
     <title>메이플 캐릭터 검색 - 메짱</title>
   </head>
   <body>
