feat: 폰트프리 로드(폰트 우선 로딩)

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+    <link rel="preload" href="../src/font/Maplestory Bold.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="../src/font/Maplestory Light.ttf" as="font" type="font/ttf" crossorigin>
+
     <title>메이플 캐릭터 검색 - 메짱</title>
   </head>
   <body>
