feat: 성능 개선, 이미지 해상도 조정, alt 추가

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+    <meta
+    name="메짱"
+    content="'메짱'은 메이플스토리 캐릭터 검색 사이트입니다.">
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-TJ84K03SB5"></script>
     <script>
@@ -15,7 +19,6 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
     <link rel="preload" href="../src/font/Maplestory Bold.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="preload" href="../src/font/Maplestory Light.ttf" as="font" type="font/ttf" crossorigin>
 
