--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
   <head>
     <meta
-    name="메짱"
+    name="description"
     content="'메짱'은 메이플스토리 캐릭터 검색 사이트입니다.">
 
     <!-- Google tag (gtag.js) -->
