--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="../src/fonts/Maplestory_Bold.woff2" as="font" type="font/woff2" crossorigin>	
     <link rel="preload" href="../src/fonts/Maplestory_Light.woff2" as="font" type="font/woff2" crossorigin>
-
+    <link rel="stylesheet" href="./main.css">
     <title>메이플 캐릭터 검색 - 메짱</title>
   </head>
   <body>
