feat: 구글 애드 추가

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-9967012422287379">
     <link rel="stylesheet" href="%PUBLIC_URL%/reset.css" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
