feat: 배포 자동화 테스트

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta
       name="description"
-      content="'메짱'은 메이플스토리 캐릭터 검색 사이트입니다."
+      content="'메짱'은 메이플스토리 캐릭터 검색 사이트입다."
     />
     <!-- Google tag (gtag.js) -->
     <script
