--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta
       name="description"
-      content="'메짱'은 메이플스토리 캐릭터 검색 사이트입다."
+      content="'메짱'은 메이플스토리 캐릭터 검색 사이트입다s."
     />
     <!-- Google tag (gtag.js) -->
     <script
